# galactic-bloodshed

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  AUTHORS  CMakeLists.txt  CMakeLists_test.txt  CNAME  CONTAINER_CHANGES_NEEDED.md  CONTAINER_FIX_GUIDE.md  CONTAINER_SOLUTION.md  CONTRIBUTING.md  COPYING  Doxyfile  GLAZE_BUG_README.md  INSTALL  LICENSE  LOCALTEST  Makefile.am  RACE_SQLITE_MIGRATION.md  README.md  SUMMARY.md  THANKS  build_test.sh  configure.ac  glaze_char_bug_simple.cpp  glaze_char_bug_test.cpp  index.html  scan-build.sh  setup-dev-env.sh  uploaddocs.sh
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
.github/agents/: manager.agent.md  reviewer.agent.md  worker.agent.md
.github/skills/add-field-to-serialized-entity/: SKILL.md
.github/skills/clang-query-refactoring/: SKILL.md
.github/skills/command-implementation/: SKILL.md
.github/skills/database-test-pattern/: SKILL.md
.github/skills/entity-list-iteration/: SKILL.md
.github/skills/entity-manager-access/: SKILL.md
.github/skills/generate-commit-message/: SKILL.md
.github/skills/module-file-template/: SKILL.md
.github/skills/n-tier-architecture/: SKILL.md
.github/skills/phased-migration-plan/: SKILL.md
.github/skills/repository-pattern/: SKILL.md
.github/skills/strong-id-types/: SKILL.md
.github/workflows/: build-devcontainer.yml  ci-after-container-fix.yml  ci.yml
client/: AGENTS.md  CSP_COMMANDS_REFERENCE.md  SURVEY_IMPLEMENTATION.md  gb-client.py  test_survey.py
client/gb_client/: __init__.py  client.py  commands.py  models.py  network.py  protocol.py  ui.py
cmake/: compiler_setup.cmake  strip_std_includes.sh
data/: CMakeLists.txt  Makefile.am  help.txt  planet.list  star.list
docs/: CMakeLists.txt  COPILOT_TASKS.md  RACEGEN.COMPILE.HELP  RACEGEN.PLAYER.HELP  README.DOCUMENTS  README.GB  README.HUT  actionpoints.doc  allocate.doc  analysis.doc  announce.doc  appoint.doc  arm.doc  assault.doc  automove.doc  autoreport.doc  bid.doc  block.doc  bombard.doc  broadcast.doc  bug.doc  build.doc  capital.doc  capture.doc  center.doc  cew.doc  civilians.doc  colonies.doc  colony.doc  combat.doc  commands.doc  commodities.doc  communications.doc  crystal.doc  cs.doc  declare.doc  defend.doc  deploy.doc  description.doc  detonate.doc  (+104 more)
fmt/: core.h  format-inl.h  format.h
gb/: .clang-tidy  .gitignore  BUILD  CMakeLists.txt  GB_racegen.cc  GB_server.cc  GB_server.h  Makefile.am  VN.cc  VN.h  analysis.cc  analysis.h  asio_test.cc  autoreport.cc  autoreport.h  autoshoot.cc  autoshoot.h  bitops_test.cc  block_json_test.cc  bombard.cc  bombard.h  buffers.h  build.cc  build.h  build_test.cc  capital.cc  capital.h  capture.cc  capture.h  colonies.cc  colonies.h  commod_json_test.cc  cs.cc  cs.h  csp.h  declare.cc  declare.h  defense.h  dissolve.cc  dissolve.h  (+193 more)
gb/commands/: AGENTS.md  Makefile.am  analysis.cc  analysis.h  analysis_test.cc  announce.cc  announce.h  arm.cc  arm_test.cc  autoreport.cc  autoreport.h  autoreport_test.cc  bid.cc  bid_test.cc  bless.cc  bless_test.cc  block.cc  block.h  block_test.cc  bombard.cc  bombard_test.cc  build.cc  build_table_test.cc  build_test.cc  build_test_extended.cc  capital.cc  capital.h  capital_test.cc  capture.cc  capture.h  capture_test.cc  center.cc  center.h  colonies.cc  colonies.h  commands.cppm  cs.cc  cs_test.cc  declare.cc  declare.h  (+146 more)
gb/creator/: bigbang.cc  bigbang.h  makeplanet.cc  makeplanet.h  makestar.cc  makestar.h  makeuniv.cc  makeuniv.h  namegen.cc  namegen.h
gb/dal/: dallib.cppm  database.cc  database_test.cc  json_store.cc  json_store_test.cc  schema.cc
gb/repositories/: gblib-repositories.cppm  misc_repositories_test.cc  planet_repository_test.cc  race_repository_test.cc  sector_repository_test.cc  ship_repository_test.cc  star_repository_test.cc
gb/services/: entity_manager.cc  entity_manager_kill_ship_test.cc  entity_manager_test.cc  gblib-services.cppm  notification.cc  notification.cppm  session.cc  session.cppm
gb/sql/: dbdecl.h  gblib-sql.cppm  sql.cc  sql.h
gb/stores/: entities.cc  entities.h  fields.h  memstore.cc  memstore.h  schema.cc  schema.h  sqldb.cc  sqldb.h  sqlstore.cc  sqlstore.h  store.cc  store.h  stores.cc  types.cc  types.h  values.cc  values.h
gb/utils/: fileutils.cc  fileutils.h  gblib-rand.cppm  rand.cc
help/: CMakeLists.txt  actionpoints.md  allocate.md  analysis.md  announce.md  appoint.md  arm.md  assault.md  automove.md  autoreport.md  bid.md  block.md  bombard.md  broadcast.md  bug.md  build.md  capital.md  capture.md  center.md  cew.md  civilians.md  colonies.md  colony.md  combat.md  commands.md  commodities.md  communications.md  crystal.md  cs.md  declare.md  defend.md  deploy.md  description.md  detonate.md  disarm.md  discoveries.md  dismount.md  dissolve.md  distance.md  dock.md  (+97 more)
llvm-module-bug-backup/: CMakeLists.txt  README.md  header_wrapper.cppm  simple_header_lib.h  test.cc
src/: .gitignore  BUILD  CMakeLists.txt  Doxyfile  GB_copyright.h  GB_racegen.c  GB_racegen.cc  GB_racegen.h  GB_server.c  GB_server.cc  GB_server.h  GB_server.p  Makefile  Makefile.am  Makelist.c  TinyMUD_copyright.h  VN.c  VN.cc  VN.h  VN.p  analysis.c  analysis.cc  analysis.h  analysis.p  autoreport.c  autoreport.cc  autoreport.h  autoreport.p  autoshoot.c  autoshoot.cc  autoshoot.h  autoshoot.p  buffers.h  build.c  build.cc  build.h  build.p  capital.c  capital.cc  capital.h  (+245 more)
storage/: .gitignore  Makefile.am  entities.cc  entities.h  fwds.h  memstore.cc  memstore.h  registry.cc  registry.h  schema.cc  schema.h  sqldb.cc  sqldb.h  sqlstore.cc  sqlstore.h  storage.h  store.cc  store.h  types.cc  types.h  utils.cc  utils.h  values.cc  values.h
storage/demos/: main.cc
storage/tests/: fieldpaths.cc  gamedata.cc  main.cc  schemas.cc  types.cc  utils.cc  values.cc
test_build/: CMakeCache.txt  CMakeLists.txt
tools/: README.md  install-hooks.sh  parse_map.py  pre-commit
